# roarich

./: Cargo.toml  LICENSE  README.md  index.html
assets/: sw.js
src/: app.rs  data_provider.rs  directories.rs  main.rs
src/exporters/: mod.rs  xivgear.rs
src/iw_provider/: asset_loader.rs  ironworks_provider.rs  mod.rs
src/model/: item.rs  materia.rs  mod.rs
